--- a/src/components/Display/Display.module.css
+++ b/src/components/Display/Display.module.css
@@ -1,13 +1,3 @@
-.content {
-  height: 100vh;
-  width: 100vw;
-  display: grid;
-  grid-template: 1fr 1fr 1fr 1fr 1fr / 1fr 1fr;
-  grid-gap: 5px;
-  max-height: 640px;
-  max-width: 480px;
-  padding: 17px;
-  box-shadow: 2px 2px 4px 4px hsla(215, 85%, 5%, 1);
-  border: 1px solid var(--off-white);
-  background: hsla(218, 85%, 10%, 1);
+.display {
+  display: flex;
 }
